# storage/api-docs/api-docs.json
@@ -15,6 +15,114 @@
                 }
             }
         },
+        "/api/excel/export": {
+            "get": {
+                "tags": [
+                    "导出受保护且带水印的excel"
+                ],
+                "summary": "导出受保护且带水印的excel",
+                "operationId": "864d6a90f2a45fa287aadf82617013b4",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/excel/watermark": {
+            "get": {
+                "tags": [
+                    "导出受保护且带水印的excel"
+                ],
+                "summary": "水印图片生成",
+                "operationId": "93251bb12b6d6ee36251f72771b09d18",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/excel/exportMulti": {
+            "get": {
+                "tags": [
+                    "导出受保护且带水印的excel"
+                ],
+                "summary": "生成受保护且带水印的excel(数据量较大)",
+                "operationId": "e1d5e485ac8d9dd2b5dc307040be3c6e",
+                "parameters": [
+                    {
+                        "name": "apikey",
+                        "in": "header",
+                        "description": "apiKey",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "lines",
+                        "in": "query",
+                        "description": "测试函数 1000",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "测试文件名",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/excel/downloadMulti": {
+            "get": {
+                "tags": [
+                    "导出受保护且带水印的excel"
+                ],
+                "summary": "导出受保护且带水印的excel",
+                "operationId": "3b730c8abc92eb58b931f2906c97dff9",
+                "parameters": [
+                    {
+                        "name": "apikey",
+                        "in": "header",
+                        "description": "apiKey",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "lines",
+                        "in": "query",
+                        "description": "测试函数 1000",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "测试文件名",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
         "/api/v1/admin/login/login": {
             "post": {
                 "tags": [
